# AutoMR-BIM-Alignment

./: .clang-format  .gitignore  CMakeLists.txt  format.bash
Config/: cfg.yaml
include/ContextManager/: ContextManager.hpp
include/ScanContext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h  nanoflann.hpp
src/: main.cpp
src/ContextManager/: ContextManager.cpp
src/ScanContext/: Scancontext.cpp
